--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id "dagger.hilt.android.plugin"
+    id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
@@ -76,6 +77,11 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.38"
     kapt "com.google.dagger:hilt-compiler:2.38"
+
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    kapt "com.google.dagger:hilt-android-compiler:2.38"
+
     /*
     //Dagger
     def dagger_version = "2.28.1"
@@ -85,4 +91,7 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version" // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     */
+}
+kapt {
+    correctErrorTypes true
 }
