--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,23 +75,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-    implementation "com.google.dagger:hilt-android:2.38"
-    kapt "com.google.dagger:hilt-compiler:2.38"
+    def dagger_hilt = "2.38"
+    implementation "com.google.dagger:hilt-android:$dagger_hilt"
+    kapt "com.google.dagger:hilt-compiler:$dagger_hilt"
 
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    kapt "com.google.dagger:hilt-android-compiler:2.38"
 
-    /*
-    //Dagger
-    def dagger_version = "2.28.1"
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version" // if you use the support libraries
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    */
-}
-kapt {
-    correctErrorTypes true
 }
